...
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/event_poster_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/create_event_button">

        <!-- Event Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Event Name: " />

            <EditText
                android:id="@+id/edit_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp" />
        </LinearLayout>

        <!-- Event Capacity -->
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Event Capacity: " />

            <EditText
                android:id="@+id/edit_event_capacity"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20dp" />
        </LinearLayout>

        <!-- Waitlist Limit -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_waitlist_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="Set Waitlist Limit: " />

            <EditText
                android:id="@+id/edit_waitlist_limit_size"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20dp" />
        </LinearLayout>

        <!-- Geolocation Requirement -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_geolocation_requirement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="20dp"
            android:text="Event Description:" />

        <EditText
            android:id="@+id/edit_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />

    </LinearLayout>

...
