<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--User Profile Header-->
            <TextView
                android:id="@+id/user_homepage_header"
                style="@style/ActivityHeaderStyle"
                android:text="@string/startup_page"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Enter_user_info_startup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/enter_user_information"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_homepage_header" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:padding="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Enter_user_info_startup">

                <TextView
                    style="@style/FragmentConstants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name:" />

                <EditText
                    android:id="@+id/edit_user_name"
                    style="@style/FragmentConstants"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Enter Name" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:padding="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    style="@style/FragmentConstants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email: " />

                <EditText
                    android:id="@+id/edit_user_email"
                    style="@style/FragmentConstants"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textEmailAddress"
                    android:hint="Enter Email"
                    android:autofillHints="emailAddress"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:padding="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <TextView
                    style="@style/FragmentConstants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone:" />

                <EditText
                    android:id="@+id/edit_user_phone"
                    style="@style/FragmentConstants"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Enter Phone (optional)"
                    android:autofillHints="phone"/>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/organizer_startup_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="408dp"
                    android:layout_height="65dp"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/FragmentConstants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="User Facility:" />

                    <EditText
                        android:id="@+id/edit_user_facility"
                        style="@style/FragmentConstants"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Enter Facility" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                    <TextView
                        style="@style/FragmentConstants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Facility Address:" />

                    <EditText
                        android:id="@+id/edit_user_facility_address"
                        style="@style/FragmentConstants"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Enter Facility Address" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/startup_button"
                android:layout_width="162dp"
                android:layout_height="68dp"
                android:layout_marginVertical="25dp"
                android:text="Finish"
                android:textColor="@color/marian_blue"
                android:theme="@style/ButtonStyleA"
                app:layout_constraintTop_toBottomOf="@id/organizer_startup_fields"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>